# final-diagrams

./: default.nix  final-diagrams.cabal
src/Diagrams/: Final.hs
src/Diagrams/Final/: Align.hs  Angle.hs  Attributes.hs  Base.hs  Core.hs  Envelope.hs  HasOrigin.hs  Interval.hs  Located.hs  Measure.hs  Parametric.hs  Points.hs  Segment.hs  Solve.hs  Space.hs  Tangent.hs  Trace.hs  Trail.hs  Transform.hs  Type.hs
src/Diagrams/Final/Core/: Base.hs  Envelope.hs  Measure.hs  Space.hs  Style.hs  Trace.hs  Type.hs
src/Diagrams/Final/Core/Space/: Primitive.hs  TwoD.hs
src/Diagrams/Final/Sig/: Space.hsig
src/Diagrams/Final/Sig/Space/: TwoD.hsig
src/Diagrams/Final/Space/: Primitive.hs  TwoD.hs
src/Diagrams/Final/Trail/: Internal.hs
