name: final-diagrams
version: 0.0.0
synopsis: Rewrite of diagrams in finally tagless style
description:
license: BSD3
license-file: LICENSE
author: bitdizzy
maintainer: dev@bitdizzy.io
copyright: (C) 2020 bitdizzy
category:            Control
build-type:          Simple
extra-source-files: ChangeLog.md
                  , README.md

cabal-version: 2.0

library
  signatures:
  exposed-modules:
    Diagrams.Final
    Diagrams.Final.Core
    Diagrams.Final.Core.Base
    Diagrams.Final.Core.Envelope
    Diagrams.Final.Core.Measure
    Diagrams.Final.Core.Space
    Diagrams.Final.Core.Space.Primitive
    Diagrams.Final.Core.Space.TwoD
    Diagrams.Final.Core.Trace
    Diagrams.Final.Core.Type
    Diagrams.Final.Align
  other-modules:
  other-extensions:
  build-depends: base >=4.11 && <5
               , adjunctions
               , containers
               , constraints
               , distributive
               , intervals
               , lens
               , linear
               , semigroupoids
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -hide-all-packages
