name: final-diagrams
version: 0.0.0
synopsis: Rewrite of diagrams in finally tagless style
description:
license: BSD3
license-file: LICENSE
author: bitdizzy
maintainer: dev@bitdizzy.io
copyright: (C) 2020 bitdizzy
category:            Control
build-type:          Simple
extra-source-files: ChangeLog.md
                  , README.md

cabal-version: 2.0

library
  signatures:
  exposed-modules:
    Diagrams.Final
    Diagrams.Final.Core
    Diagrams.Final.Core.Base
    Diagrams.Final.Core.Envelope
    Diagrams.Final.Core.Measure
    Diagrams.Final.Core.Space
    Diagrams.Final.Core.Space.Primitive
    Diagrams.Final.Core.Space.TwoD
    Diagrams.Final.Core.Style
    Diagrams.Final.Core.Trace
    Diagrams.Final.Core.Type
    Diagrams.Final.Align
    Diagrams.Final.Angle
    Diagrams.Final.Attributes
    Diagrams.Final.Interval
    Diagrams.Final.Located
    Diagrams.Final.Parametric
    Diagrams.Final.Points
    Diagrams.Final.Segment
    Diagrams.Final.Solve
    Diagrams.Final.Trail.Internal
  other-modules:
  other-extensions:
  build-depends: base >=4.11 && <5
               , adjunctions
               , colour
               , containers
               , constraints
               , deepseq
               , distributive
               , groups
               , intervals
               , lens
               , linear
               , mono-traversable
               , semigroupoids
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -hide-all-packages
